feat: adicionar Google Tag Manager (gtag.js) ao HTML

--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
     />
     <meta name="favicon" href="/favicon2.png" />
     <link rel="icon" type="image/x-png" href="/favicon2.png" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16785453689"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-16785453689");
+    </script>
   </head>
 
   <body>
