--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Loja Progressiva Fashion. Somos afiliados da B2Club e todos os produtos são entregues e vendidos direto da Fabrica. Vendas sujeitas a análise e disponibilidade de estoque."
+    />
+    <meta
+      name="keywords"
+      content="Loja, Progressiva, Fashion, ybera, fashion gold"
+    />
+    <meta name="author" content="Loja Progressiva Fashion" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="robots" content="index, follow" />
     <title>Loja Progressiva Fashion</title>
     <link
       rel="stylesheet"
