feat: adicionar link alternativo hreflang e atualizar regras no robots.txt

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <meta name="author" content="Loja Progressiva Fashion" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://lojaprogressivafashion.com.br/" />
+    <link
+      rel="alternate"
+      href="https://lojaprogressivafashion.com.br/"
+      hreflang="pt-BR"
+    />
     <title>Loja Progressiva Fashion</title>
     <link
       rel="stylesheet"
