--- a/index.html
+++ b/index.html
@@ -17,31 +17,61 @@
     </script>
 
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta
       name="description"
-      content="Loja Progressiva Fashion. Somos afiliados da B2Club e todos os produtos são entregues e vendidos direto da Fabrica. Vendas sujeitas a análise e disponibilidade de estoque."
+      content="Loja Progressiva Fashion. Produtos oficiais, vendidos e entregues direto da fábrica. Compra segura, estoque atualizado e envio rápido."
     />
-    <meta
-      name="keywords"
-      content="Loja, Progressiva, Fashion, ybera, fashion gold"
-    />
+    <meta name="keywords" content="Loja, Progressiva, Fashion, Ybera, Fashion Gold" />
     <meta name="author" content="Loja Progressiva Fashion" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://lojaprogressivafashion.com.br/" />
-    <link
-      rel="alternate"
-      href="https://lojaprogressivafashion.com.br/"
-      hreflang="pt-BR"
+    <meta name="application-name" content="Loja Progressiva Fashion" />
+    <link rel="canonical" href="https://www.lojaprogressivafashion.com.br/" />
+    <link rel="alternate" href="https://www.lojaprogressivafashion.com.br/" hreflang="pt-BR" />
+    <meta property="og:site_name" content="Loja Progressiva Fashion" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Loja Progressiva Fashion" />
+    <meta
+      property="og:description"
+      content="Produtos oficiais, vendidos e entregues direto da fábrica. Compra segura, estoque atualizado e envio rápido."
     />
+    <meta property="og:url" content="https://www.lojaprogressivafashion.com.br/" />
+    <meta property="og:image" content="https://www.lojaprogressivafashion.com.br/logo-progressiva.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Loja Progressiva Fashion" />
+    <meta
+      name="twitter:description"
+      content="Produtos oficiais, vendidos e entregues direto da fábrica. Compra segura, estoque atualizado e envio rápido."
+    />
+    <meta name="twitter:image" content="https://www.lojaprogressivafashion.com.br/logo-progressiva.png" />
     <title>Loja Progressiva Fashion</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <meta name="favicon" href="/favicon2.png" />
-    <link rel="icon" type="image/x-png" href="/favicon2.png" />
+    <link rel="icon" type="image/png" href="/favicon2.png" />
+    <link rel="apple-touch-icon" href="/favicon2.png" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Loja Progressiva Fashion",
+        "url": "https://www.lojaprogressivafashion.com.br/",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://www.lojaprogressivafashion.com.br/loja?search={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
 
   <body>
